--- a/SalesWebMcv/appsettings.json
+++ b/SalesWebMcv/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SalesWebMvcContext": "server=localhost;userid=root;password=43fe143fe1;database=saleswebmvcappdb"
+  }
 }
